feat: loop for ranking on jsp.
Other minor changes added.