@@ -144,7 +144,9 @@ public class PlayerPointsService {
     }
 
     public Map<String, List<String>> getPlayersPointsEndGame(Integer gameId) {
-        List<String> points = playerPointsRepository.findPointsEndGameRanked(gameId).stream().map(Object::toString).collect(Collectors.toList());
+        List<String> points = playerPointsRepository.findPointsEndGameRanked(gameId).stream()
+        		.map(Object::toString)
+        		.toList();
         List<String> usernames = playerPointsRepository.findUsernameEndGameRankedByPoints(gameId);
         Map<String, List<String>> playerPointsEndGame = new HashMap<>();
         playerPointsEndGame.put("points", points);
